[gd_scene load_steps=59 format=2]

[ext_resource path="res://Src/UI/MainMenu/AboutPopUp.gd" type="Script" id=1]
[ext_resource path="res://Src/UI/MainMenu/FullScreenBox.gd" type="Script" id=2]
[ext_resource path="res://Src/UI/MainMenu/RulePopUp.gd" type="Script" id=3]
[ext_resource path="res://Src/UI/MainMenu/SettingPopUp.gd" type="Script" id=4]
[ext_resource path="res://Src/UI/MainMenu/MainMenu.gd" type="Script" id=5]
[ext_resource path="res://Resource/Font/kimberley.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Src/UI/MainMenu/VolumeSlider.gd" type="Script" id=7]
[ext_resource path="res://Src/UI/MainMenu/Tltle.gd" type="Script" id=8]
[ext_resource path="res://Asset/Art/Splash/ShipwreckAdventure-Main menu background-TITLE.png" type="Texture" id=9]
[ext_resource path="res://Asset/Art/Splash/ShipwreckAdventure-Main menu background.jpg" type="Texture" id=10]
[ext_resource path="res://Src/UI/MainMenu/TitleMusic.gd" type="Script" id=11]
[ext_resource path="res://Asset/Sound/BGM/Tiltle_Music.ogg" type="AudioStream" id=12]
[ext_resource path="res://Src/UI/Button.gd" type="Script" id=13]
[ext_resource path="res://Asset/Art/UI/buttonSettingsB.png" type="Texture" id=14]
[ext_resource path="res://Asset/Art/UI/buttonCreditsB.png" type="Texture" id=15]
[ext_resource path="res://Asset/Art/UI/buttonStartA.png" type="Texture" id=16]
[ext_resource path="res://Asset/Art/UI/buttonStartB.png" type="Texture" id=17]
[ext_resource path="res://Asset/Art/UI/buttonAboutA.png" type="Texture" id=18]
[ext_resource path="res://Asset/Art/UI/buttonExitA.png" type="Texture" id=19]
[ext_resource path="res://Asset/Art/UI/buttonExitB.png" type="Texture" id=20]
[ext_resource path="res://Asset/Art/UI/buttonSettingsA.png" type="Texture" id=21]
[ext_resource path="res://Asset/Art/UI/buttonCreditsA.png" type="Texture" id=22]
[ext_resource path="res://Asset/Art/UI/buttonAboutB.png" type="Texture" id=23]
[ext_resource path="res://Src/UI/ButtonTexture.gd" type="Script" id=24]
[ext_resource path="res://Asset/Art/Arix/Animation/Coin.png" type="Texture" id=25]
[ext_resource path="res://Asset/Art/Arix/Animation/Neckless.png" type="Texture" id=26]
[ext_resource path="res://Asset/Art/Arix/Animation/Spikes.png" type="Texture" id=27]
[ext_resource path="res://Asset/Art/Arix/Animation/Diamond.png" type="Texture" id=28]

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=11]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=12]
font_data = ExtResource( 6 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 25 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 25 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 25 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 25 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 26 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 26 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 26 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 26 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 26 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 26 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=23]
animations = [ {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 5 ), SubResource( 22 ) ],
"loop": true,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 28 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 28 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 28 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 28 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=28]
animations = [ {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": true,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 27 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 27 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 27 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 27 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 27 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=31]
animations = [ {
"frames": [ SubResource( 14 ), SubResource( 29 ), SubResource( 30 ), SubResource( 13 ), SubResource( 16 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 5 )

[node name="BackGround" type="Sprite" parent="."]
scale = Vector2( 0.166667, 0.166667 )
texture = ExtResource( 10 )
centered = false

[node name="Tltle" type="Sprite" parent="BackGround"]
texture = ExtResource( 9 )
centered = false
script = ExtResource( 8 )

[node name="Tween" type="Tween" parent="BackGround/Tltle"]

[node name="MenuUI" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="MenuUI"]
margin_right = 18.0
margin_bottom = 18.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons1" type="MarginContainer" parent="MenuUI/UI"]
margin_left = 12.0
margin_top = 147.0
margin_right = 170.0
margin_bottom = 172.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MenuUI/UI/Buttons1"]
margin_top = 12.0
margin_right = 158.0
margin_bottom = 25.0
size_flags_horizontal = 4
size_flags_vertical = 10

[node name="Start" type="TextureButton" parent="MenuUI/UI/Buttons1/HBoxContainer"]
margin_right = 50.0
margin_bottom = 13.0
rect_min_size = Vector2( 50, 13 )
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 17 )
expand = true
stretch_mode = 4
script = ExtResource( 24 )

[node name="Setting" type="TextureButton" parent="MenuUI/UI/Buttons1/HBoxContainer"]
margin_left = 54.0
margin_right = 104.0
margin_bottom = 13.0
rect_min_size = Vector2( 50, 13 )
texture_normal = ExtResource( 21 )
texture_pressed = ExtResource( 14 )
expand = true
stretch_mode = 4
script = ExtResource( 24 )

[node name="Exit" type="TextureButton" parent="MenuUI/UI/Buttons1/HBoxContainer"]
margin_left = 108.0
margin_right = 158.0
margin_bottom = 13.0
rect_min_size = Vector2( 50, 13 )
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 20 )
expand = true
stretch_mode = 4
script = ExtResource( 24 )

[node name="Button2" type="VBoxContainer" parent="MenuUI/UI"]
margin_left = 267.0
margin_top = 128.0
margin_right = 309.0
margin_bottom = 174.0
mouse_filter = 2
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rule" type="TextureButton" parent="MenuUI/UI/Button2"]
margin_top = 16.0
margin_right = 50.0
margin_bottom = 29.0
rect_min_size = Vector2( 50, 13 )
size_flags_horizontal = 8
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 23 )
expand = true
stretch_mode = 4
script = ExtResource( 24 )

[node name="About" type="TextureButton" parent="MenuUI/UI/Button2"]
margin_top = 33.0
margin_right = 50.0
margin_bottom = 46.0
rect_min_size = Vector2( 50, 13 )
size_flags_horizontal = 8
texture_normal = ExtResource( 22 )
texture_pressed = ExtResource( 15 )
expand = true
stretch_mode = 4
script = ExtResource( 24 )

[node name="SettingPopUp" type="MarginContainer" parent="MenuUI/UI"]
visible = false
margin_right = 320.0
margin_bottom = 180.0
rect_pivot_offset = Vector2( -121, 35 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="MenuUI/UI/SettingPopUp"]
margin_right = 320.0
margin_bottom = 180.0
color = Color( 0.454902, 0.643137, 0.756863, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="MenuUI/UI/SettingPopUp"]
margin_right = 320.0
margin_bottom = 180.0

[node name="Control" type="Control" parent="MenuUI/UI/SettingPopUp/VBoxContainer"]
margin_right = 320.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )

[node name="Volume" type="HBoxContainer" parent="MenuUI/UI/SettingPopUp/VBoxContainer"]
margin_top = 34.0
margin_right = 320.0
margin_bottom = 53.0

[node name="Control" type="Control" parent="MenuUI/UI/SettingPopUp/VBoxContainer/Volume"]
margin_right = 20.0
margin_bottom = 19.0
rect_min_size = Vector2( 20, 0 )

[node name="Label" type="Label" parent="MenuUI/UI/SettingPopUp/VBoxContainer/Volume"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 24.0
margin_right = 79.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 6 )
text = "Volume"

[node name="Control2" type="Control" parent="MenuUI/UI/SettingPopUp/VBoxContainer/Volume"]
margin_left = 83.0
margin_right = 103.0
margin_bottom = 19.0
rect_min_size = Vector2( 20, 0 )

[node name="Slider" type="HSlider" parent="MenuUI/UI/SettingPopUp/VBoxContainer/Volume"]
margin_left = 107.0
margin_right = 207.0
margin_bottom = 16.0
rect_min_size = Vector2( 100, 0 )
max_value = 1.0
step = 0.05
script = ExtResource( 7 )

[node name="Value" type="Label" parent="MenuUI/UI/SettingPopUp/VBoxContainer/Volume"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 211.0
margin_top = 2.0
margin_right = 219.0
margin_bottom = 16.0
text = "0"

[node name="Control2" type="Control" parent="MenuUI/UI/SettingPopUp/VBoxContainer"]
margin_top = 57.0
margin_right = 320.0
margin_bottom = 77.0
rect_min_size = Vector2( 0, 20 )

[node name="FullScreen" type="HBoxContainer" parent="MenuUI/UI/SettingPopUp/VBoxContainer"]
margin_top = 81.0
margin_right = 320.0
margin_bottom = 105.0

[node name="Control" type="Control" parent="MenuUI/UI/SettingPopUp/VBoxContainer/FullScreen"]
margin_right = 20.0
margin_bottom = 24.0
rect_min_size = Vector2( 20, 0 )

[node name="Label" type="Label" parent="MenuUI/UI/SettingPopUp/VBoxContainer/FullScreen"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 24.0
margin_top = 2.0
margin_right = 105.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 7 )
text = "Full Screen"

[node name="CheckBox" type="CheckBox" parent="MenuUI/UI/SettingPopUp/VBoxContainer/FullScreen"]
margin_left = 109.0
margin_right = 133.0
margin_bottom = 24.0
script = ExtResource( 2 )

[node name="Control3" type="Control" parent="MenuUI/UI/SettingPopUp/VBoxContainer"]
margin_top = 109.0
margin_right = 320.0
margin_bottom = 149.0
rect_min_size = Vector2( 0, 40 )

[node name="Button" type="HBoxContainer" parent="MenuUI/UI/SettingPopUp/VBoxContainer"]
margin_top = 153.0
margin_right = 320.0
margin_bottom = 178.0
alignment = 2

[node name="Back" type="Button" parent="MenuUI/UI/SettingPopUp/VBoxContainer/Button"]
margin_left = 248.0
margin_right = 296.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 8 )
text = "Back"
script = ExtResource( 13 )
sound = "res://Asset/Sound/SFX/Button_Cancle.wav"

[node name="Control" type="Control" parent="MenuUI/UI/SettingPopUp/VBoxContainer/Button"]
margin_left = 300.0
margin_right = 320.0
margin_bottom = 25.0
rect_min_size = Vector2( 20, 0 )

[node name="AboutPopUP" type="MarginContainer" parent="MenuUI/UI"]
visible = false
margin_right = 320.0
margin_bottom = 180.0
rect_pivot_offset = Vector2( -121, 35 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="MenuUI/UI/AboutPopUP"]
margin_right = 320.0
margin_bottom = 180.0
color = Color( 0.733333, 0.745098, 0.517647, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="MenuUI/UI/AboutPopUP"]
margin_right = 320.0
margin_bottom = 180.0

[node name="Control" type="Control" parent="MenuUI/UI/AboutPopUP/VBoxContainer"]
margin_right = 320.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )

[node name="Label" type="Label" parent="MenuUI/UI/AboutPopUP/VBoxContainer"]
modulate = Color( 0, 0, 0, 1 )
margin_top = 24.0
margin_right = 320.0
margin_bottom = 131.0
custom_fonts/font = SubResource( 9 )
text = "    Goro - Main programmer
    Mai - Designer / programmer
    GraphicEdit - Art
    Arix - Art
    Lan Coulter - Music / SFX "

[node name="Control2" type="Control" parent="MenuUI/UI/AboutPopUP/VBoxContainer"]
margin_top = 135.0
margin_right = 320.0
margin_bottom = 145.0
rect_min_size = Vector2( 0, 10 )

[node name="Button" type="HBoxContainer" parent="MenuUI/UI/AboutPopUP/VBoxContainer"]
margin_top = 149.0
margin_right = 320.0
margin_bottom = 174.0
alignment = 2

[node name="Back" type="Button" parent="MenuUI/UI/AboutPopUP/VBoxContainer/Button"]
margin_left = 248.0
margin_right = 296.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 10 )
text = "Back"
script = ExtResource( 13 )
sound = "res://Asset/Sound/SFX/Button_Cancle.wav"

[node name="Control" type="Control" parent="MenuUI/UI/AboutPopUP/VBoxContainer/Button"]
margin_left = 300.0
margin_right = 320.0
margin_bottom = 25.0
rect_min_size = Vector2( 20, 0 )

[node name="RulePopUp" type="MarginContainer" parent="MenuUI/UI"]
margin_right = 320.0
margin_bottom = 180.0
rect_pivot_offset = Vector2( -121, 35 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="MenuUI/UI/RulePopUp"]
margin_right = 320.0
margin_bottom = 180.0
color = Color( 0.701961, 0.521569, 0.768627, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="MenuUI/UI/RulePopUp"]
margin_right = 320.0
margin_bottom = 180.0

[node name="Control" type="Control" parent="MenuUI/UI/RulePopUp/VBoxContainer"]
margin_right = 320.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )

[node name="Label" type="Label" parent="MenuUI/UI/RulePopUp/VBoxContainer"]
modulate = Color( 0, 0, 0, 1 )
margin_top = 24.0
margin_right = 320.0
margin_bottom = 131.0
custom_fonts/font = SubResource( 11 )
text = "    WASD/ZQSD - Move
  
    Avoid the traps and enemies

    Collect the treasures!"

[node name="Control2" type="Control" parent="MenuUI/UI/RulePopUp/VBoxContainer"]
margin_top = 135.0
margin_right = 320.0
margin_bottom = 145.0
rect_min_size = Vector2( 0, 10 )

[node name="Button" type="HBoxContainer" parent="MenuUI/UI/RulePopUp/VBoxContainer"]
margin_top = 149.0
margin_right = 320.0
margin_bottom = 174.0
alignment = 2

[node name="Back" type="Button" parent="MenuUI/UI/RulePopUp/VBoxContainer/Button"]
margin_left = 248.0
margin_right = 296.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 12 )
text = "Back"
script = ExtResource( 13 )
sound = "res://Asset/Sound/SFX/Button_Cancle.wav"

[node name="Control" type="Control" parent="MenuUI/UI/RulePopUp/VBoxContainer/Button"]
margin_left = 300.0
margin_right = 320.0
margin_bottom = 25.0
rect_min_size = Vector2( 20, 0 )

[node name="Coin" type="AnimatedSprite" parent="MenuUI/UI/RulePopUp"]
position = Vector2( 199, 123 )
frames = SubResource( 17 )
frame = 3
playing = true

[node name="Necklace" type="AnimatedSprite" parent="MenuUI/UI/RulePopUp"]
position = Vector2( 228, 123 )
frames = SubResource( 23 )
frame = 5
playing = true

[node name="Diamond" type="AnimatedSprite" parent="MenuUI/UI/RulePopUp"]
position = Vector2( 268, 123 )
frames = SubResource( 28 )
frame = 2
playing = true

[node name="SpikeTrap" type="AnimatedSprite" parent="MenuUI/UI/RulePopUp"]
position = Vector2( 256, 77 )
frames = SubResource( 31 )
frame = 2
playing = true

[node name="TitleMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
autoplay = true
script = ExtResource( 11 )

[connection signal="tween_completed" from="BackGround/Tltle/Tween" to="BackGround/Tltle" method="_on_tween_completed"]
[connection signal="pressed" from="MenuUI/UI/Buttons1/HBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="MenuUI/UI/Buttons1/HBoxContainer/Start" to="MenuUI/UI/Buttons1/HBoxContainer/Start" method="_on_pressed"]
[connection signal="pressed" from="MenuUI/UI/Buttons1/HBoxContainer/Setting" to="." method="_on_Setting_pressed"]
[connection signal="pressed" from="MenuUI/UI/Buttons1/HBoxContainer/Setting" to="MenuUI/UI/Buttons1/HBoxContainer/Setting" method="_on_pressed"]
[connection signal="pressed" from="MenuUI/UI/Buttons1/HBoxContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="MenuUI/UI/Buttons1/HBoxContainer/Exit" to="MenuUI/UI/Buttons1/HBoxContainer/Exit" method="_on_pressed"]
[connection signal="pressed" from="MenuUI/UI/Button2/Rule" to="." method="_on_Rule_pressed"]
[connection signal="pressed" from="MenuUI/UI/Button2/Rule" to="MenuUI/UI/Button2/Rule" method="_on_pressed"]
[connection signal="pressed" from="MenuUI/UI/Button2/About" to="." method="_on_About_pressed"]
[connection signal="pressed" from="MenuUI/UI/Button2/About" to="MenuUI/UI/Button2/About" method="_on_pressed"]
[connection signal="value_changed" from="MenuUI/UI/SettingPopUp/VBoxContainer/Volume/Slider" to="MenuUI/UI/SettingPopUp/VBoxContainer/Volume/Slider" method="_on_value_changed"]
[connection signal="pressed" from="MenuUI/UI/SettingPopUp/VBoxContainer/FullScreen/CheckBox" to="MenuUI/UI/SettingPopUp/VBoxContainer/FullScreen/CheckBox" method="_on_CheckBox_pressed"]
[connection signal="pressed" from="MenuUI/UI/SettingPopUp/VBoxContainer/Button/Back" to="MenuUI/UI/SettingPopUp" method="_on_Back_pressed"]
[connection signal="pressed" from="MenuUI/UI/SettingPopUp/VBoxContainer/Button/Back" to="MenuUI/UI/SettingPopUp/VBoxContainer/Button/Back" method="_on_pressed"]
[connection signal="pressed" from="MenuUI/UI/AboutPopUP/VBoxContainer/Button/Back" to="MenuUI/UI/AboutPopUP" method="_on_Back_pressed"]
[connection signal="pressed" from="MenuUI/UI/AboutPopUP/VBoxContainer/Button/Back" to="MenuUI/UI/AboutPopUP/VBoxContainer/Button/Back" method="_on_pressed"]
[connection signal="pressed" from="MenuUI/UI/RulePopUp/VBoxContainer/Button/Back" to="MenuUI/UI/RulePopUp" method="_on_Back_pressed"]
[connection signal="pressed" from="MenuUI/UI/RulePopUp/VBoxContainer/Button/Back" to="MenuUI/UI/RulePopUp/VBoxContainer/Button/Back" method="_on_pressed"]
